# mwin

./: Cargo.toml  README.md  notes.md
src/: errors.rs  events.rs  handler.rs  input.rs  lib.rs  main.rs  messaging.rs  requests.rs  traits.rs  window.rs
src/handler/: linux.rs  linux_window.rs  microsoft.rs  microsoft_window.rs  unix.rs  window_trait.rs
src/handler/linux/: linux_image_buffer.rs  linux_window.rs
src/handler/microsoft/: ms_image_buffer.rs  ms_window.rs
src/handler/unix/: unix_image_buffer.rs  unix_window.rs  wayland_image_buffer.rs  wayland_window.rs  x11_image_buffer.rs  x11_window.rs
src/messaging/: events.rs  requests.rs
tests/: integration_test.rs
