[package]
name = "mwin"
version = "0.1.1"
description = "A window creation and management library which focuses on ease of use."
license = "MIT"
repository = "https://github.com/valerie-mc/mwin"
readme = "README.md"
rust-version = "1.86.0"
edition = "2024"


[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
bitflags = "2.11.0"
windows-strings = "0.5.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
